<resources>
    <string name="app_name">Cheficious</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="textview">TextView</string>
    <string name="action_settings">Settings</string>
    <string name="action_favorites">Favorites</string>
    <string name="title_activity_veg">Veggies</string>

    <string name="title_activity_non_veg">Meat Lovers</string>
    <string name="title_activity_desserts">Desserts</string>
    <string name="title_activity_drinks">Drinks</string>
    <string name="title_activity_display">Your Recipe</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="baked_chicken_legs">Baked Chicken Legs</string>
    <string name="black_pepper_chicken">Black Pepper Chicken</string>
    <string name="chicken_biryani">Chicken Biryani</string>
    <string name="chicken_swiss_roll">Chicken Swiss Roll</string>
    <string name="chicken_tacos">Chicken Tacos</string>
    <string name="chicken_tikka">Chicken Tikka</string>
    <string name="lemon_chicken">Lemon Chicken</string>
    <string name="naan_burger">Naan Burger</string>
    <string name="nargisi_kofta">Nargisi Kofta</string>
    <string name="spicy_chicken_bites">Spicy Chicken Bites</string>
    <string name="stuffed_chicken">Stuffed Chicken</string>
    <string name="aam_panna">Aam Panna</string>
    <string name="black_grape_cocktail">Black Grape Cocktail</string>
    <string name="cucumber_mojito">Cucumber Mojito</string>
    <string name="green_tea_detox">Green Tea Detox</string>
    <string name="homemade_frooti">Homemade Frooti</string>
    <string name="indian_lemonade">Indian Lemonade</string>
    <string name="jack_frost">Jack Frost</string>
    <string name="mango_iced_tea">Mango Iced Tea</string>
    <string name="masala_milk">Masala Milk</string>
    <string name="midori_splice">Midori Splice</string>
    <string name="pink_lemonade">Pink Lemonade</string>
    <string name="sunset_cocktail">Sunset Cocktail</string>
    <string name="achari_roll">Achari Roll</string>
    <string name="bharva_bengan">Bharva Bengan</string>
    <string name="bharwa_bhindi">Bharwa Bhindi</string>
    <string name="chana_curry">Chana Curry</string>
    <string name="chatpati_masoor_dal">Chatpati Masoor Dal</string>
    <string name="corn_pulao">Corn Pulao</string>
    <string name="dal_makhni">Dal Makhni</string>
    <string name="kadhai_paneer">Kadhai Paneer</string>
    <string name="masala_aloo">Masala Aloo</string>
    <string name="mushroom_masala">Mushroom Masala</string>
    <string name="stuffed_bun">Stuffed Bun</string>
    <string name="white_sauce_pasta">White Sauce Pasta</string>
    <string name="besan_barfi">Besan Barfi</string>
    <string name="bread_malpua">Bread Malpua</string>
    <string name="chocolate_pumpkin">Chocolate Pumpkin</string>
    <string name="coconut_ladoo">Coconut Ladoo</string>
    <string name="eggless_brownies">Eggless Brownies</string>
    <string name="ghewar">Ghewar</string>
    <string name="gujiya">Gujiya</string>
    <string name="gur_ki_kheer">Gur Ki Kheer</string>
    <string name="moong_dal_halwa">Moong Dal Halwa</string>
    <string name="pineapple_crunch">Pineapple Crunch</string>
    <string name="pineapple_shrikhand">Pineapple Shrikhand</string>
    <string name="suji_halwa">Suji Halwa</string>
    <string name="desserts">Desserts</string>
    <string name="drinks">Drinks</string>
    <string name="non_veg">Non-Veg</string>
    <string name="veg">Veg</string>

</resources>
