<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.anshul.cheficiousn.veg"
    tools:showIn="@layout/activity_veg">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view1"
        android:layout_width="140dp"
        android:layout_height="103dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="20dp"
        android:onClick="v1"
        card_view:cardCornerRadius="4dp"
        tools:ignore="ExtraText">
        <android.support.v7.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/a1"
            />
        <TextView
            android:id="@+id/info_text1"
            android:text="@string/masala_aloo"
            android:textStyle="bold"
            android:textColor="#Ff0000"
            android:textAlignment="center"
            android:background="#ffffff"
            android:layout_marginTop="85dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

         </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view2"
        android:layout_width="140dp"
        android:layout_height="103dp"
        android:layout_marginStart="-310dp"
        android:layout_marginTop="20dp"
        android:onClick="v2"
        card_view:cardCornerRadius="4dp"
        >
        <android.support.v7.widget.AppCompatImageView
            android:layout_width="match_parent"

            android:layout_height="100dp"
            android:background="@drawable/a2"
            />
        <TextView
            android:id="@+id/info_text2"
            android:text="@string/mushroom_masala"

            android:textStyle="bold"
            android:textColor="#Ff0000"
            android:textAlignment="center"
            android:background="#ffffff"
            android:layout_marginTop="85dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

         </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view3"
        android:layout_width="140dp"
        android:layout_height="103dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="140dp"
        android:onClick="v3"
        card_view:cardCornerRadius="4dp"
        tools:ignore="RtlHardcoded">
        <android.support.v7.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/a3"
            />
        <TextView
            android:id="@+id/info_text3"
            android:text="@string/bharva_bengan"

            android:textStyle="bold"
            android:textColor="#Ff0000"
            android:textAlignment="center"
            android:background="#ffffff"
            android:layout_marginTop="85dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

         </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view4"
        android:layout_width="140dp"
        android:layout_height="103dp"
        android:layout_marginStart="-310dp"
        android:layout_marginTop="140dp"
        android:onClick="v4"
        card_view:cardCornerRadius="4dp">
        <android.support.v7.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/a15"
            />
        <TextView
            android:id="@+id/info_text4"
            android:text="@string/corn_pulao"

            android:textStyle="bold"
            android:textColor="#Ff0000"
            android:textAlignment="center"
            android:background="#ffffff"
            android:layout_marginTop="85dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />



         </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view5"
        android:layout_width="140dp"
        android:layout_height="103dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="260dp"
        android:onClick="v5"
        card_view:cardCornerRadius="4dp">
        <android.support.v7.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/a5"
            />
        <TextView
            android:id="@+id/info_text5"
            android:text="@string/dal_makhni"

            android:textStyle="bold"
            android:textColor="#Ff0000"
            android:textAlignment="center"
            android:background="#ffffff"
            android:layout_marginTop="85dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

         </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view6"
        android:layout_width="140dp"
        android:layout_height="103dp"
        android:layout_marginStart="-310dp"
        android:layout_marginTop="260dp"
        android:onClick="v6"
        card_view:cardCornerRadius="4dp">
        <android.support.v7.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/a6"
            android:id="@+id/appCompatImageView" />
        <TextView
            android:id="@+id/info_text6"
            android:text="@string/bharwa_bhindi"

            android:textStyle="bold"
            android:textColor="#Ff0000"
            android:textAlignment="center"
            android:background="#ffffff"
            android:layout_marginTop="85dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

         </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view7"
        android:layout_width="140dp"
        android:layout_height="103dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="380dp"
        android:onClick="v7"
        card_view:cardCornerRadius="4dp">
        <android.support.v7.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/a7"
            />
        <TextView
            android:id="@+id/info_text7"
            android:text="@string/kadhai_paneer"

            android:textStyle="bold"
            android:textColor="#Ff0000"
            android:textAlignment="center"
            android:background="#ffffff"
            android:layout_marginTop="85dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

         </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view8"
        android:layout_width="140dp"
        android:layout_height="103dp"
        android:layout_marginStart="-310dp"
        android:layout_marginTop="380dp"
        android:onClick="v8"
        card_view:cardCornerRadius="4dp">
        <android.support.v7.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/a8"
            />
        <TextView
            android:id="@+id/info_text8"
            android:text="@string/white_sauce_pasta"

            android:textStyle="bold"
            android:textColor="#Ff0000"
            android:textAlignment="center"
            android:background="#ffffff"
            android:layout_marginTop="85dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

         </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view9"
        android:layout_width="140dp"
        android:layout_height="103dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="500dp"
        android:onClick="v9"
        card_view:cardCornerRadius="4dp">
        <android.support.v7.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/a13"
            />
        <TextView
            android:id="@+id/info_text9"
            android:text="@string/achari_roll"

            android:textStyle="bold"
            android:textColor="#Ff0000"
            android:textAlignment="center"
            android:background="#ffffff"
            android:layout_marginTop="85dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

         </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view10"
        android:layout_width="140dp"
        android:layout_height="103dp"
        android:layout_marginStart="-310dp"
        android:layout_marginTop="500dp"
        android:onClick="v10"
        card_view:cardCornerRadius="4dp">
        <android.support.v7.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/a10"
            />
        <TextView
            android:id="@+id/info_text10"
            android:text="@string/stuffed_bun"

            android:textStyle="bold"
            android:textColor="#Ff0000"
            android:textAlignment="center"
            android:background="#ffffff"
            android:layout_marginTop="85dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

         </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view11"
        android:layout_width="140dp"
        android:layout_height="103dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="620dp"
        android:onClick="v11"
        card_view:cardCornerRadius="4dp">
        <android.support.v7.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/a11"
            />
        <TextView
            android:id="@+id/info_text11"
            android:text="@string/chana_curry"

            android:textStyle="bold"
            android:textColor="#Ff0000"
            android:textAlignment="center"
            android:background="#ffffff"
            android:layout_marginTop="85dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

         </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view12"
        android:layout_width="140dp"
        android:layout_height="103dp"
        android:layout_marginStart="-310dp"
        android:layout_marginTop="620dp"
        android:onClick="v12"
        card_view:cardCornerRadius="4dp">
        <android.support.v7.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/a12"
            />
        <TextView
            android:id="@+id/info_text12"
            android:text="@string/chatpati_masoor_dal"

            android:textStyle="bold"
            android:textColor="#Ff0000"
            android:textAlignment="center"
            android:background="#ffffff"
            android:layout_marginTop="85dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

         </android.support.v7.widget.CardView>

</LinearLayout>





    </android.support.v4.widget.NestedScrollView>
